--- a/contact_us.html
+++ b/contact_us.html
@@ -34,7 +34,7 @@
                         <h4>Partner Enquiries</h4>
                     </div>
                     <div class="enquiry-content">
-                        <img src="./images/partner.png">
+                        <img src="images/contact_us/partner.png">
                         <p>
                             partnerenquiry@osomrummy.com
                             Call us:    
@@ -48,7 +48,7 @@
                         <h4>Instant Enquiries</h4>
                     </div>
                     <div class="enquiry-content">
-                        <img src="./images/instant.png">
+                        <img src="images/contact_us/instant.png">
                         <p>
                             partnerenquiry@osomrummy.com
                             Call us:    
@@ -75,12 +75,12 @@
             </div>
             <div class="col-lg- col-sm col-4 col-md-3 px-0 border-left text-center right-contact-block">
                 <div class="border-bottom border-secondary support">
-                    <img src="images/support.png">
+                    <img src="images/contact_us/support.png">
                     <h4>Contact Support</h4>
                     <p><span style="font-weight: 600;">Email:&nbsp;</span>cs@osomgame.com</p>
                 </div>
                 <div class="border-bottom border-secondary address">
-                    <img src="images/address.png">
+                    <img src="images/contact_us/address.png">
                     <h4>Office Address:</h4>
                     <p>A 1/4, DLF 
                        Phase 1, Sector 26A,
